# MyGame

./: CMakeLists.txt  README.md  main.cpp
CharacterObject/: CharacterObject.cpp  CharacterObject.h  Passenger.h  Player.cpp  Player.h  TrainInspector.h
Common/: RadVec.h  err_codes.h  game_def_constants.h  game_obj_types.h  proj_macros.h
Common/Memcheck/: memleakdiag.cpp  memleakdiag.h
Common/Print/: print.cpp  print.h  print.hpp
Exception/: MyExcp.cpp  MyExcp.h
GameEngine/: GameEngine.cpp  GameEngine.h
GameObjects/: Bench.cpp  Bench.h  CharacterObject.cpp  CharacterObject.h  DrawableObject.cpp  DrawableObject.h  GameObject.cpp  GameObject.h  MoveableObject.cpp  MoveableObject.h  Passenger.cpp  PhysicalObject.cpp  PhysicalObject.h  Player.cpp  PlayerableObject.cpp  PlayerableObject.h  StaticDrawObject.cpp  StaticDrawObject.h  TrainInspector.cpp  characters.h
GameObjects/FinalObjects/: Bench.cpp  Bench.h  MainPlayer.cpp  MainPlayer.h  TrainInspector.cpp  TrainInspector.h
GameObjects/FunctionalClasses/: DrawableObject.cpp  DrawableObject.h  MoveableObject.cpp  MoveableObject.h  PhysicalObject.cpp  PhysicalObject.h  WithTargetObject.cpp  WithTargetObject.h
GameObjects/MainSuperclass/: GameObject.cpp  GameObject.h
GameObjects/PseudoInterfaces/: EnemyObject.cpp  EnemyObject.h  PlayerableObject.cpp  PlayerableObject.h  StaticDrawObject.cpp  StaticDrawObject.h
VectorUtils/: vector.h  vector.hpp
VectorUtils/VectorBool/: vector_bool.cpp  vector_bool.h
configs/: config.ini  config2.ini
log/: gamelog
